# Python-to-vhdl-converter

./: DFlipFlop.py  Flow Diagram of the Project.docx  MemoryDecoder_Test.py  README.md  SevenSegment_Controller_Test.py  comparator.py  comparator_VHDL.py  data.json  input.txt  mux.py  pyproject.toml  result.txt  result.vhdl  sketch.txt  tb_comparator_VHDL.py  test.py  test2.py
7Segment Controller results/: SevenSegment_Controller_Test.vhdl  demux1x4.vhdl
Memory Decoder results/: MemoryDecoder_Test.vhdl  decoder3x8.vhdl
MemoryDecoder_Test__results/: MemoryDecoder_Test.vhdl  decoder3x8.vhdl
Project_Tests/MemoryDecoder_Test__results/: MemoryDecoder_Test.vhdl
Project_Tests/comparator__results/: comparator.vhdl
Project_Tests/tb_comparator_VHDL__results/: tb_comparator_VHDL.vhdl
PythonToVhdlConverter/: __init__.py  basic_converter.py  data_types.py  filters.py  lexer.py  logic_converter.py  to_json.py  to_vhdl.py  tokens.py  validation.py
PythonToVhdlConverter/components/: DFlipFlop.py  FullAdder.py  HalfAdder.py  JKFlipFlop.py  TFlipFlop.py  decoder2x4.py  decoder3x8.py  demux1x4.py  demux1x8.py  encoder4to2.py  encoder8to3.py  mux4x1.py  mux4x1.vhdl  mux8x1.py
SevenSegment_Controller_Test__results/: SevenSegment_Controller_Test.vhdl
old_results/: mux4x1.vhdl  test.vhdl
results/: JKFlipFlop.vhdl  MemoryDecoder_Test.vhdl  SevenSegment_Controller_Test.vhdl  demux1x4.vhdl  demux1x8.vhdl  mux4x1.vhdl  test.vhdl
tb_comparator_VHDL__results/: comparator_VHDL.vhdl  tb_comparator_VHDL.vhdl
test__results/: JKFlipFlop.vhdl  demux1x4.vhdl  test.vhdl
(+4 files in other folders)
